Fixed anchor tag overlap that prevented a like

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -266,6 +266,7 @@ nav + .container {
 	left: 0;
 	right: 0;
 	z-index: 1;
+	width: 50%;
 }
 
 #messages .list-group-item a:not(.message-link) {
